2007.02.05: David Nichols
	* corrected a bug in the HTTPClient class where the Host field was being
	  set to the local host name instead of the name of the host being
	  connected to
	* updated Socket::sendHTTPMessage() to ensure that a "/" is sent as the 
	  path if the path is otherwise empty
	* updated HTTPClient to set the port number in the Host: field if it's
	  not port 80

2007.01.31: David Nichols
	* fixed a bug in ManagedDatasource thread resource tracking

*** v0.6.0 *** RELEASE

2007.01.30: David Nichols
	* fixed character encoding handling with content-type headers in
	  lib/QoreHTTPClient.cc

2007.01.29: David Nichols
	* fixed a logical bug in setenv() (could have caused a crash)
	* made environment manipulations thread-safe on HP-UX
	* fixed compiles without single-compilation-unit

2007.01.25: David Nichols
	* fixed a bug in thread resource tracking in the qore Datasource class
	  (c++ ManagedDatasource class)

2007.01.24: David Nichols
	* fixed a memory leak with a parse exception in parser.yy

2007.01.23: David Nichols
	* fixed bugs parsing empty JSON lists and hashes

2007.01.22: David Nichols
	* added XmlRpcClient class to library
	* fixed encoding bugs in parsing XML (libxml2 requires input to be 
	  converted to UTF-8 before parsing
	* added JsonRpcClient class to library
	* added XmlRpcClient documentation
	* moved HTTPClient, XmlRpcClient, and JsonRpcClient to the Qore 
	  namespace
	* added JsonRpcClient class documentation
	* fixed a segfault in switch with comparison operators when the switch 
	  argument was NULL
	* updated case statements in switch to be able to process any type when
	  relational operators are used
	* Solaris and HP-UX build fixes

2007.01.19: David Nichols
	* added HTTPClient class documentation
	* extensive documentation updates for 0.6.0 release

2007.01.18: David Nichols
	* added 2007 to copyright notices
	* enabled internal HTTPClient class
	* added C++ Hash::takeKeyValue() method

2007.01.10: David Nichols